Created new landing page
Original landing page renamed to assignment1.html
Added image subdirectory with profile picture
Created new index.html with more in depth formatting and information

--- a/index.html
+++ b/index.html
@@ -1,6 +1,30 @@
+<!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+        <meta charset="utf-8">
+        <title>Assignment 2 Landing Page</title>
+    </head>
     <body>
-        <p>Hello, World!</p>
+        <h1><strong>BRODY CYPHERS</strong></h1>
+        <h3>HE / HIM / HIS</h3>
+        <em>Creative Technology & Design<br/></em>
+        <em>Computer Science<br/></em>
+
+        <h3>GOALS</h3>
+        <p>My goals for this course are to learn how to <strong>design</strong> and <strong>create</strong> my own website.<br/>
+          I have little experience with HTML and CSS, but I have always wanted to learn.<br/>
+          This course will be a great motivator to get started!<br/></p>
+
+        <h3>ABOUT ME</h3>
+        <p>I have a passion for the outdoors including big mountain skiing, climbing and backpacking.<br/>
+          My other interests include esports, prop fabrication, and digital arts.</p>
+
+        <img src="/img/Profile.JPG" alt="It's Me!" width="400">
+        <p></p>
+
+        <h3>FAVORITE VIDEO</h3>
+        <p>Aaron Draplin is one of my favorite graphic designers, based in Portland, Oregon.<br/>
+          His videos are extremely informative, and he has a great teaching personality.</p>
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Design Tips & Tricks</a>
     </body>
 </html>
