Updated encyclopedia page
Added tiles, sections, and links

--- a/assignment3.html
+++ b/assignment3.html
@@ -2,23 +2,126 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Sandwich Stuff Encyclopedia</title>
+        <title>Grilled Sausages</title>
     </head>
     <body>
-        <h1><strong>SANDWICH STUFF</strong></h1>
-        <em>Does a Hot Dog Apply?<br/></em>
+        <h1><strong>SAUSAGE</strong></h1>
+        <h3><em>hot dog? <strong>sandwich?</strong></em></h3>
+        <hr>
 
-        <h3>Hot Dog?</h3>
-        <p><br/></p>
+        <p>A <strong>sausage</strong> is a type of meat product usually made from ground meat, often pork, beef, or poultry,
+          along with salt, spices and other flavourings. Other ingredients such as grains or breadcrumbs may be included
+          as fillers or extenders.<br/></p>
 
-        <h3>HOT DOG!</h3>
-        <p></p>
+        <p>Typically, a sausage is formed in a casing traditionally made from intestine but sometimes from synthetic materials.
+          Sausages that are sold raw are cooked in many ways, including pan-frying, broiling and barbecuing.
+          Some sausages are cooked during processing, and the casing may then be removed.<br/></p>
 
-        <!-- <img src="/img/Profile.JPG" alt="It's Me!" width="400"> -->
-        <p></p>
+        <p>Sausages are made in a wide range of national and regional varieties, which differ by the types of meats that are
+          used, the flavouring or spicing ingredients (garlic, peppers, wine, etc.), and the manner of preparation.<br/></p>
 
-        <h3>FAVORITE VIDEO</h3>
-        <p></p>
-        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Design Tips & Tricks</a>
+        <hr>
+        <h4>Contents</h4>
+        <ul>
+          <li><a href="#History">History</a></li>
+          <li><a href="#Casing">Casing</a></li>
+          <li><a href="#Ingredients">Ingredients</a></li>
+          <li><a href="#Classifications">Classifications</a></li>
+          <li><a href="#Gallery">Gallery</a></li>
+          <li><a href="#See_Also">See Also</a></li>
+        </ul>
+        <hr>
+
+        <h3 id="History">History</h3>
+        <hr>
+        <p>Sausage making is a natural outcome of efficient butchery. Traditionally, sausage makers salted various tissues
+          and organs such as scraps, organ meats, blood, and fat to help preserve them. They then stuffed them into tubular
+          casings made from the cleaned intestines of the animal, producing the characteristic cylindrical shape. Hence,
+          sausages, puddings, and salami are among the oldest of prepared foods, whether cooked and eaten immediately or
+          dried to varying degrees.<br/></p>
+
+        <p>The Greek poet Homer mentioned a kind of blood sausage in the Odyssey, Epicharmus wrote a comedy titled The Sausage,
+          and Aristophanes' play The Knights is about a sausage vendor who is elected leader. Evidence suggests that sausages
+          were already popular both among the ancient Greeks and Romans and most likely with the various tribes occupying the
+          larger part of Europe.<br/></p>
+
+        <p>The most famous sausage in ancient Italy was from Lucania (modern Basilicata) and was called lucanica, a name which
+          lives on in a variety of modern sausages in the Mediterranean.<br/></p>
+        <hr>
+
+        <h3 id="Casing">Casing</h3>
+        <hr>
+        <p>Traditionally, sausage casings were made of the cleaned intestines, or stomachs in the case of haggis and other
+          traditional puddings. Today, however, natural casings are often replaced by collagen, cellulose, or even plastic
+          casings, especially in the case of industrially manufactured sausages. Some forms of sausage, such as sliced sausage,
+          are prepared without a casing. Additionally, luncheon meat and sausage meat are now available without casings in tin
+          cans and jars.<br/></p>
+        <hr>
+
+        <h3 id="Ingredients">Ingredients</h3>
+        <hr>
+        <p>A sausage consists of meat cut into pieces or ground, mixed with other ingredients, and filled into a casing.
+          Ingredients may include a cheap starch filler such as breadcrumbs or grains, seasoning and flavourings such as spices,
+          and sometimes others such as apple and leek.[8] The meat may be from any animal but is often pork, beef or veal, or
+          poultry. The lean meat-to-fat ratio depends upon the style and producer.<br/></p>
+
+        <p>Many traditional styles of sausage from Asia and mainland Europe use no bread-based filler and include only meat
+          (lean meat and fat) and flavorings. In the United Kingdom and other countries with English cuisine traditions, many
+          sausages contain a significant proportion of bread and starch-based fillers, which may comprise 30% of ingredients.
+          The filler in many sausages helps them to keep their shape as they are cooked. As the meat contracts in the heat,
+          the filler expands and absorbs moisture and fat from the meat.<br/></p>
+
+        <p>When the food processing industry produces sausages for a low price point, almost any part of the animal can end up
+          in sausages, varying from cheap, fatty specimens stuffed with meat blasted off the carcasses (mechanically recovered
+          meat, MRM) and rusk. On the other hand, the finest quality contain only choice cuts of meat and seasoning.<br/></p>
+        <hr>
+
+        <h3 id="Classifications">Classifications</h3>
+        <hr>
+        <p>Sausages classification is subject to regional differences of opinion. Various metrics such as types of ingredients,
+          consistency, and preparation are used. In the English-speaking world, the following distinction between fresh, cooked,
+          and dry sausages seems to be more or less accepted:<br/></p>
+
+        <ul>
+          <li>Cooked sausages are made with fresh meats and then fully cooked. They are either eaten immediately after cooking
+            or must be refrigerated. Examples include hot dogs, Braunschweiger, and liver sausage. Meat-and-grain sausages
+            such as goetta, scrapple, and kishka are also cooked sausages.</li>
+          <li>Fresh sausages are made from meats that have not been previously cured. They must be refrigerated and thoroughly
+            cooked before eating. Examples include Boerewors, Italian pork sausage, siskonmakkara, and breakfast sausage.</li>
+          <li>Dry sausages are cured sausages that are fermented and dried. Some are smoked as well at the beginning of the
+            drying process. They are generally eaten cold and will keep for a long time. Examples include salami, Droë wors,
+            Finnish meetvursti, Sucuk, Landjäger (smoked), Slim Jims, and summer sausage.</li>
+          <li>Dictionary Merriam-Webster, on the other hand, has stated that a <strong>hot dog is indeed a sandwich.</strong>
+            United States Supreme Court justice Ruth Bader Ginsburg also weighed in on the matter, stating that a hot dog
+            might be categorized to be a sandwich, but ultimately it comes down to the definition of a sandwich. She went on to
+            acknowledge that a hot dog bun is a single roll that is not sliced all the way through and in that way is
+            similar to a submarine sandwich.</li>
+          <li>Vegetarian sausage are made without meat, for example, based on soya protein or tofu, with herbs and spices.
+            Some vegetarian sausages are not necessarily vegan and may contain ingredients such as eggs.</li>
+        </ul>
+
+        <p>The distinct flavor of some sausages is due to fermentation by Lactobacillus, Pediococcus, or Micrococcus
+          (added as starter cultures) or natural flora during curing.<br/></p>
+        <hr>
+
+        <h3 id="Gallery">Gallery</h3>
+        <hr>
+        <img src="/img/long.jpeg" alt="Long sausage" height="400">
+        <img src="/img/several.jpeg" alt="Several sausage" height="400">
+        <img src="/img/grilled.jpg" alt="Grilled sausage" height="400">
+        <hr>
+
+        <h3 id="See_Also">See Also</h3>
+        <hr>
+        <ul>
+          <li><a href="https://jeli12.github.io/assignments/assignment3.html">Sausages usually go well with bacon</a></li>
+          <li><a href="https://en.wikipedia.org/wiki/Hot_dog">Sausages can be put in sandwiches</a></li>
+          <li><a href="https://eatpants.github.io/assignment3.html">Egg?</a></li>
+          <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Cooking Tips</a></li>
+        </ul>
+        <hr>
+
+        <p>Source: <a href="https://en.wikipedia.org/wiki/Sausage">Sausage Wiki</a></p>
+
     </body>
 </html>
