--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
         <img src="/img/Profile.JPG" alt="It's Me!" width="400">
         <p></p>
 
+        <h3>ATLS2200 TABLE OF CONTENTS</h3>
+        <p>Assignment 1: <a href="assignment1.html">Link</a></p>
+        <p>Assignment 2: This one i think?</p>
+        <p>Assignment 3: <a href="assignment3.html">Link</a></p>
+
         <h3>FAVORITE VIDEO</h3>
         <p>Aaron Draplin is one of my favorite graphic designers, based in Portland, Oregon.<br/>
           His videos are extremely informative, and he has a great teaching personality.</p>
