Completed HTML challenges
Added a table of contents, chess board, form, example page, and HTML accessibility concerns.

--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
         <p></p>
 
         <h3>ATLS2200 TABLE OF CONTENTS</h3>
-        <p>Assignment 1: <a href="assignment1.html">Link</a></p>
-        <p>Assignment 2: This one i think?</p>
-        <p>Assignment 3: <a href="assignment3.html">Link</a></p>
+        <p>Assignment 1: <a href="assignment1.html">Hello, World!</a></p>
+        <p>Assignment 2: This One</p>
+        <p>Assignment 3: <a href="assignment3.html">Sausages</a></p>
+        <p>Assignment 4: <a href="assignment4.html">HTML Challenges</a></p>
 
         <h3>FAVORITE VIDEO</h3>
         <p>Aaron Draplin is one of my favorite graphic designers, based in Portland, Oregon.<br/>
