--- a/assignment1.html
+++ b/assignment1.html
@@ -1,5 +1,9 @@
+<!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+      <meta charset="utf-8">
+      <title>Hello, World!</title>
+    </head>
     <body>
         <p>Hello, World!</p>
     </body>
