Changed page title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Assignment 2 Landing Page</title>
+        <title>ATLS2200 Landing Page</title>
     </head>
     <body>
         <h1><strong>BRODY CYPHERS</strong></h1>
