--- a/assignment4.html
+++ b/assignment4.html
@@ -4,13 +4,48 @@
         <meta charset="utf-8">
         <title>Assignment 4</title>
         <style type="text/css">
-          .tg  {border-collapse:collapse;border-spacing:0;}
-          .tg td{border-color:black;border-style:solid;border-width:2px;font-family:Arial, sans-serif;font-size:14px;
-            overflow:hidden;padding:10px 5px;word-break:normal;}
-          .tg th{border-color:black;border-style:solid;border-width:2px;font-family:Arial, sans-serif;font-size:14px;
-            font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
-          .tg .tg-fcvo{background-color:#689169;color:#202122;font-size:55px;text-align:center;vertical-align:middle;width:70px;height:50px}
-          .tg .tg-i219{background-color:#e4e2ce;color:#202122;font-size:55px;text-align:center;vertical-align:middle;width:70px;height:50px}
+          .tg {
+            border-collapse:collapse;
+            border-spacing:0;
+          }
+          .tg td {
+            border-color:black;
+            border-style:solid;
+            border-width:2px;
+            font-family:Arial, sans-serif;
+            font-size:14px;
+            overflow:hidden;
+            padding:10px 5px;
+            word-break:normal;
+          }
+          .tg th {
+            border-color:black;
+            border-style:solid;
+            border-width:2px;
+            font-family:Arial, sans-serif;
+            font-size:14px;
+            font-weight:normal;
+            overflow:hidden;
+            padding:10px 5px;
+            word-break:normal;}
+          .tg .tg-fcvo {
+            background-color:#689169;
+            color:#202122;
+            font-size:55px;
+            text-align:center;
+            vertical-align:middle;
+            width:70px;
+            height:50px
+          }
+          .tg .tg-i219 {
+            background-color:#e4e2ce;
+            color:#202122;
+            font-size:55px;
+            text-align:center;
+            vertical-align:middle;
+            width:70px;
+            height:50px
+          }
         </style>
     </head>
     <body>
