--- a/assignment4.html
+++ b/assignment4.html
@@ -4,48 +4,18 @@
         <meta charset="utf-8">
         <title>Assignment 4</title>
         <style type="text/css">
-          .tg {
-            border-collapse:collapse;
-            border-spacing:0;
-          }
-          .tg td {
-            border-color:black;
-            border-style:solid;
-            border-width:2px;
-            font-family:Arial, sans-serif;
-            font-size:14px;
-            overflow:hidden;
-            padding:10px 5px;
-            word-break:normal;
-          }
-          .tg th {
-            border-color:black;
-            border-style:solid;
-            border-width:2px;
-            font-family:Arial, sans-serif;
-            font-size:14px;
-            font-weight:normal;
-            overflow:hidden;
-            padding:10px 5px;
-            word-break:normal;}
-          .tg .tg-fcvo {
-            background-color:#689169;
-            color:#202122;
-            font-size:55px;
-            text-align:center;
-            vertical-align:middle;
-            width:70px;
-            height:50px
-          }
-          .tg .tg-i219 {
-            background-color:#e4e2ce;
-            color:#202122;
-            font-size:55px;
-            text-align:center;
-            vertical-align:middle;
-            width:70px;
-            height:50px
-          }
+          .tg  {border-collapse:collapse;border-spacing:0;}
+          .tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+            overflow:hidden;padding:10px 5px;word-break:normal;}
+          .tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+            font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+          .tg .tg-u432{background-color:#656565;border-color:#000000;color:#202122;font-size:50px;text-align:center;vertical-align:middle;width:60px;height:50px}
+          .tg .tg-jnor{background-color:#F8F9FA;border-color:#000000;color:#202122;font-size:50px;text-align:center;vertical-align:middle;width:60px;height:50px}
+          .tg .tg-1f02{background-color:#656565;border-color:#000000;color:#202122;font-size:50px;text-align:center;vertical-align:middle;width:60px;height:50px}
+          .tg .tg-4fcf{background-color:#656565;border-color:#000000;font-size:50px;text-align:center;vertical-align:middle;width:60px;height:50px}
+          .tg .tg-4n8x{border-color:#000000;font-size:50px;text-align:center;vertical-align:middle;width:60px;height:50px}
+          .tg .tg-ovu3{background-color:#F8F9FA;border-color:#000000;color:#202122;font-size:50px;text-align:center;vertical-align:middle;width:60px;height:50px}
+          .tg .tg-hfij{background-color:#656565;border-color:#000000;color:#000000;font-size:50px;text-align:center;vertical-align:middle;width:60px;height:50px}
         </style>
     </head>
     <body>
@@ -67,86 +37,86 @@
         <table class="tg">
         <thead>
           <tr>
-            <th class="tg-i219">♜</th>
-            <th class="tg-fcvo">♞</th>
-            <th class="tg-i219">♝</th>
-            <th class="tg-fcvo">♛</th>
-            <th class="tg-i219">♚</th>
-            <th class="tg-fcvo">♝</th>
-            <th class="tg-i219">♞</th>
-            <th class="tg-fcvo">♜</th>
+            <th class="tg-4fcf">♜</th>
+            <th class="tg-4n8x">♞</th>
+            <th class="tg-4fcf">♝</th>
+            <th class="tg-4n8x">♛</th>
+            <th class="tg-4fcf">♚</th>
+            <th class="tg-4n8x">♝</th>
+            <th class="tg-4fcf">♞</th>
+            <th class="tg-4n8x">♜</th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td class="tg-fcvo">♟︎</td>
-            <td class="tg-i219">♟︎</td>
-            <td class="tg-fcvo">♟︎</td>
-            <td class="tg-i219">♟︎</td>
-            <td class="tg-fcvo">♟︎</td>
-            <td class="tg-i219">♟︎</td>
-            <td class="tg-fcvo">♟︎</td>
-            <td class="tg-i219">♟︎</td>
+            <td class="tg-ovu3">♟︎</td>
+            <td class="tg-1f02">♟︎</td>
+            <td class="tg-ovu3">♟︎</td>
+            <td class="tg-1f02">♟︎</td>
+            <td class="tg-ovu3">♟︎</td>
+            <td class="tg-1f02">♟︎</td>
+            <td class="tg-ovu3">♟︎</td>
+            <td class="tg-1f02">♟︎</td>
           </tr>
           <tr>
-            <td class="tg-i219"></td>
-            <td class="tg-fcvo"></td>
-            <td class="tg-i219"></td>
-            <td class="tg-fcvo"></td>
-            <td class="tg-i219"></td>
-            <td class="tg-fcvo"></td>
-            <td class="tg-i219"></td>
-            <td class="tg-fcvo"></td>
+            <td class="tg-4fcf"></td>
+            <td class="tg-4n8x"></td>
+            <td class="tg-4fcf"></td>
+            <td class="tg-4n8x"></td>
+            <td class="tg-4fcf"></td>
+            <td class="tg-4n8x"></td>
+            <td class="tg-4fcf"></td>
+            <td class="tg-4n8x"></td>
           </tr>
           <tr>
-            <td class="tg-fcvo"></td>
-            <td class="tg-i219"></td>
-            <td class="tg-fcvo"></td>
-            <td class="tg-i219"></td>
-            <td class="tg-fcvo"></td>
-            <td class="tg-i219"></td>
-            <td class="tg-fcvo"></td>
-            <td class="tg-i219"></td>
+            <td class="tg-4n8x"></td>
+            <td class="tg-4fcf"></td>
+            <td class="tg-4n8x"></td>
+            <td class="tg-4fcf"></td>
+            <td class="tg-4n8x"></td>
+            <td class="tg-4fcf"></td>
+            <td class="tg-4n8x"></td>
+            <td class="tg-hfij"></td>
           </tr>
           <tr>
-            <td class="tg-i219"></td>
-            <td class="tg-fcvo"></td>
-            <td class="tg-i219"></td>
-            <td class="tg-fcvo"></td>
-            <td class="tg-i219"></td>
-            <td class="tg-fcvo"></td>
-            <td class="tg-i219"></td>
-            <td class="tg-fcvo"></td>
+            <td class="tg-4fcf"></td>
+            <td class="tg-4n8x"></td>
+            <td class="tg-4fcf"></td>
+            <td class="tg-4n8x"></td>
+            <td class="tg-4fcf"></td>
+            <td class="tg-4n8x"></td>
+            <td class="tg-4fcf"></td>
+            <td class="tg-4n8x"></td>
           </tr>
           <tr>
-            <td class="tg-fcvo"></td>
-            <td class="tg-i219"></td>
-            <td class="tg-fcvo"></td>
-            <td class="tg-i219"></td>
-            <td class="tg-fcvo"></td>
-            <td class="tg-i219"></td>
-            <td class="tg-fcvo"></td>
-            <td class="tg-i219"></td>
+            <td class="tg-4n8x"></td>
+            <td class="tg-4fcf"></td>
+            <td class="tg-4n8x"></td>
+            <td class="tg-4fcf"></td>
+            <td class="tg-4n8x"></td>
+            <td class="tg-4fcf"></td>
+            <td class="tg-4n8x"></td>
+            <td class="tg-4fcf"></td>
           </tr>
           <tr>
-            <td class="tg-i219">♙</td>
-            <td class="tg-fcvo">♙</td>
-            <td class="tg-i219">♙</td>
-            <td class="tg-fcvo">♙</td>
-            <td class="tg-i219">♙</td>
-            <td class="tg-fcvo">♙</td>
-            <td class="tg-i219">♙</td>
-            <td class="tg-fcvo">♙</td>
+            <td class="tg-u432">♙</td>
+            <td class="tg-jnor">♙</td>
+            <td class="tg-u432">♙</td>
+            <td class="tg-jnor">♙</td>
+            <td class="tg-u432">♙</td>
+            <td class="tg-jnor">♙</td>
+            <td class="tg-u432">♙</td>
+            <td class="tg-jnor">♙</td>
           </tr>
           <tr>
-            <td class="tg-fcvo">♖</td>
-            <td class="tg-i219">♘</td>
-            <td class="tg-fcvo">♗</td>
-            <td class="tg-i219">♕</td>
-            <td class="tg-fcvo">♔</td>
-            <td class="tg-i219">♗</td>
-            <td class="tg-fcvo">♘</td>
-            <td class="tg-i219">♖</td>
+            <td class="tg-4n8x">♖</td>
+            <td class="tg-4fcf">♘</td>
+            <td class="tg-4n8x">♗</td>
+            <td class="tg-4fcf">♕</td>
+            <td class="tg-4n8x">♔</td>
+            <td class="tg-4fcf">♗</td>
+            <td class="tg-4n8x">♘</td>
+            <td class="tg-4fcf">♖</td>
           </tr>
         </tbody>
         </table>
@@ -226,10 +196,9 @@
         <h2 id="challenge5">Challenge 5: Accessibility Concerns</h2>
         <p> Much of the internet presents challenges to those with visual impairments, as it is predominantly reliant on sight.<br>
           In Challenge 2, there is a very low contrast ratio between the chess pieces and their matching colored space. A screen
-          reader might also struggle identifying the unicode tags and telling the listener where a piece is within the board. This
-          can be fixed in part by selecting different colors than black and white as the cell backgrounds.<br>
+          reader might also struggle identifying the unicode tags and telling the listener where a piece is within the board.
           Navigating a website can also be difficult, which is why we use large headers to signal where content is. This challenge
-          is also helped using a Table of Contents and hyperlinks. <br> However, one oversight with this page is there is no way
+          is also helped using the Table of Contents and hyperlinks. <br> However, one oversight with this page is there is no way
           to get from one section to the other easily without going back to the Navigation Bar. This could be fixed with a bar
           that follows the user down the page to allow them to navigate more easily.
       </div>
