Added assignment5 link

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <p>Assignment 2: This One</p>
         <p>Assignment 3: <a href="assignment3.html">Sausages</a></p>
         <p>Assignment 4: <a href="assignment4.html">HTML Challenges</a></p>
+        <p>Assignment 5: <a href="assignment5.html">Challenges V2</a></p>
 
         <h3>FAVORITE VIDEO</h3>
         <p>Aaron Draplin is one of my favorite graphic designers, based in Portland, Oregon.<br/>
