--- a/assignment3.html
+++ b/assignment3.html
@@ -3,12 +3,35 @@
     <head>
         <meta charset="utf-8">
         <title>Grilled Sausages</title>
+        <link rel="stylesheet" href="/css/styles.css" type="text/css">
+        <!-- https://fonts.adobe.com/my_fonts?project_id=jpg1uwx#web_projects-section -->
+        <link rel="font-library" href="https://use.typekit.net/jpg1uwx.css">
     </head>
     <body>
+        <ul>
+          <li><a href="assignment1.html">Assignment 1: Hello, World!</a></li>
+          <li><a href="index.html">Assignment 2: Home Page</a></li>
+          <li><a href="assignment3.html">Assignment 3: This One</a></li>
+          <li><a href="assignment4.html">Assignment 4: HTML Challenges</a></li>
+          <li><a href="assignment5.html">Assignment 5: Challenges V2</a></li>
+        </ul>
+
+        <hr>
+
         <h1><strong>SAUSAGE</strong></h1>
         <h3><em>hot dog? <strong>sandwich?</strong></em></h3>
         <hr>
 
+        <ul>
+          <li><a href="#History">History</a></li>
+          <li><a href="#Casing">Casing</a></li>
+          <li><a href="#Ingredients">Ingredients</a></li>
+          <li><a href="#Classifications">Classifications</a></li>
+          <li><a href="#Gallery">Gallery</a></li>
+          <li><a href="#See_Also">See Also</a></li>
+        </ul>
+
+        <hr>
         <p>A <strong>sausage</strong> is a type of meat product usually made from ground meat, often pork, beef, or poultry,
           along with salt, spices and other flavourings. Other ingredients such as grains or breadcrumbs may be included
           as fillers or extenders.<br/></p>
@@ -20,16 +43,6 @@
         <p>Sausages are made in a wide range of national and regional varieties, which differ by the types of meats that are
           used, the flavouring or spicing ingredients (garlic, peppers, wine, etc.), and the manner of preparation.<br/></p>
 
-        <hr>
-        <h4>Contents</h4>
-        <ul>
-          <li><a href="#History">History</a></li>
-          <li><a href="#Casing">Casing</a></li>
-          <li><a href="#Ingredients">Ingredients</a></li>
-          <li><a href="#Classifications">Classifications</a></li>
-          <li><a href="#Gallery">Gallery</a></li>
-          <li><a href="#See_Also">See Also</a></li>
-        </ul>
         <hr>
 
         <h3 id="History">History</h3>
@@ -82,21 +95,21 @@
           consistency, and preparation are used. In the English-speaking world, the following distinction between fresh, cooked,
           and dry sausages seems to be more or less accepted:<br/></p>
 
-        <ul>
-          <li>Cooked sausages are made with fresh meats and then fully cooked. They are either eaten immediately after cooking
+        <ul class="exempt">
+          <li class="exempt">Cooked sausages are made with fresh meats and then fully cooked. They are either eaten immediately after cooking
             or must be refrigerated. Examples include hot dogs, Braunschweiger, and liver sausage. Meat-and-grain sausages
             such as goetta, scrapple, and kishka are also cooked sausages.</li>
-          <li>Fresh sausages are made from meats that have not been previously cured. They must be refrigerated and thoroughly
+          <li class="exempt">Fresh sausages are made from meats that have not been previously cured. They must be refrigerated and thoroughly
             cooked before eating. Examples include Boerewors, Italian pork sausage, siskonmakkara, and breakfast sausage.</li>
-          <li>Dry sausages are cured sausages that are fermented and dried. Some are smoked as well at the beginning of the
+          <li class="exempt">Dry sausages are cured sausages that are fermented and dried. Some are smoked as well at the beginning of the
             drying process. They are generally eaten cold and will keep for a long time. Examples include salami, Droë wors,
             Finnish meetvursti, Sucuk, Landjäger (smoked), Slim Jims, and summer sausage.</li>
-          <li>Dictionary Merriam-Webster, on the other hand, has stated that a <strong>hot dog is indeed a sandwich.</strong>
+          <li class="exempt">Dictionary Merriam-Webster, on the other hand, has stated that a <strong>hot dog is indeed a sandwich.</strong>
             United States Supreme Court justice Ruth Bader Ginsburg also weighed in on the matter, stating that a hot dog
             might be categorized to be a sandwich, but ultimately it comes down to the definition of a sandwich. She went on to
             acknowledge that a hot dog bun is a single roll that is not sliced all the way through and in that way is
             similar to a submarine sandwich.</li>
-          <li>Vegetarian sausage are made without meat, for example, based on soya protein or tofu, with herbs and spices.
+          <li class="exempt">Vegetarian sausage are made without meat, for example, based on soya protein or tofu, with herbs and spices.
             Some vegetarian sausages are not necessarily vegan and may contain ingredients such as eggs.</li>
         </ul>
 
@@ -113,11 +126,11 @@
 
         <h3 id="See_Also">See Also</h3>
         <hr>
-        <ul>
-          <li><a href="https://jeli12.github.io/assignments/assignment3.html">Sausages usually go well with bacon</a></li>
-          <li><a href="https://en.wikipedia.org/wiki/Hot_dog">Sausages can be put in sandwiches</a></li>
-          <li><a href="https://eatpants.github.io/assignment3.html">Egg?</a></li>
-          <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Cooking Tips</a></li>
+        <ul class="exempt">
+          <li class="exempt"><a href="https://jeli12.github.io/assignments/assignment3.html">Sausages usually go well with bacon</a></li>
+          <li class="exempt"><a href="https://en.wikipedia.org/wiki/Hot_dog">Sausages can be put in sandwiches</a></li>
+          <li class="exempt"><a href="https://eatpants.github.io/assignment3.html">Egg?</a></li>
+          <li class="exempt"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Cooking Tips</a></li>
         </ul>
         <hr>
 
