--- a/assignment5.html
+++ b/assignment5.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>Assignment 4</title>
+        <link rel="stylesheet" href="/css/styles.css" type="text/css">
+        <!-- https://fonts.adobe.com/my_fonts?project_id=jpg1uwx#web_projects-section -->
+        <link rel="font-library" href="https://use.typekit.net/jpg1uwx.css">
         <style type="text/css">
           .search-page {
             font-family:Arial, sans-serif;
@@ -80,7 +83,17 @@
         </style>
     </head>
     <body>
-      <h1>Assignment 4</h1>
+      <ul>
+        <li><a href="assignment1.html">Assignment 1: Hello, World!</a></li>
+        <li><a href="index.html">Assignment 2: Home Page</a></li>
+        <li><a href="assignment3.html">Assignment 3: Sausages</a></li>
+        <li><a href="assignment4.html">Assignment 4: HTML Challenges</a></li>
+        <li><a href="assignment5.html">Assignment 5: This One</a></li>
+      </ul>
+
+      <hr>
+
+      <h1>Assignment 5</h1>
 
       <div>
         <h2 id="challenge1">Challenge 1: Table of Contents</h2>
