--- a/index.html
+++ b/index.html
@@ -3,18 +3,33 @@
     <head>
         <meta charset="utf-8">
         <title>ATLS2200 Landing Page</title>
+        <link rel="stylesheet" href="/css/styles.css" type="text/css">
+        <!-- https://fonts.adobe.com/my_fonts?project_id=jpg1uwx#web_projects-section -->
+        <link rel="font-library" href="https://use.typekit.net/jpg1uwx.css">
     </head>
     <body>
+        <ul>
+          <li><a href="assignment1.html">Assignment 1: Hello, World!</a></li>
+          <li><a href="index.html">Assignment 2: This One</a></li>
+          <li><a href="assignment3.html">Assignment 3: Sausages</a></li>
+          <li><a href="assignment4.html">Assignment 4: HTML Challenges</a></li>
+          <li><a href="assignment5.html">Assignment 5: Challenges V2</a></li>
+        </ul>
+
+        <hr>
+
         <h1><strong>BRODY CYPHERS</strong></h1>
         <h3>HE / HIM / HIS</h3>
         <em>Creative Technology & Design<br/></em>
         <em>Computer Science<br/></em>
 
+        <br/><hr>
         <h3>GOALS</h3>
         <p>My goals for this course are to learn how to <strong>design</strong> and <strong>create</strong> my own website.<br/>
           I have little experience with HTML and CSS, but I have always wanted to learn.<br/>
           This course will be a great motivator to get started!<br/></p>
 
+        <hr>
         <h3>ABOUT ME</h3>
         <p>I have a passion for the outdoors including big mountain skiing, climbing and backpacking.<br/>
           My other interests include esports, prop fabrication, and digital arts.</p>
@@ -22,16 +37,15 @@
         <img src="/img/Profile.JPG" alt="It's Me!" width="400">
         <p></p>
 
-        <h3>ATLS2200 TABLE OF CONTENTS</h3>
-        <p>Assignment 1: <a href="assignment1.html">Hello, World!</a></p>
-        <p>Assignment 2: This One</p>
-        <p>Assignment 3: <a href="assignment3.html">Sausages</a></p>
-        <p>Assignment 4: <a href="assignment4.html">HTML Challenges</a></p>
-        <p>Assignment 5: <a href="assignment5.html">Challenges V2</a></p>
-
+        <hr>
         <h3>FAVORITE VIDEO</h3>
         <p>Aaron Draplin is one of my favorite graphic designers, based in Portland, Oregon.<br/>
           His videos are extremely informative, and he has a great teaching personality.</p>
         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Design Tips & Tricks</a>
+
+        <hr>
+        <h3>DESIGN LIBARY</h3>
+
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="button">BUTTON</a>
     </body>
 </html>
