--- a/assignments/assignment3.html
+++ b/assignments/assignment3.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="utf-8">
         <title>Grilled Sausages</title>
-        <link rel="stylesheet" href="/css/styles.css" type="text/css">
+        <link rel="stylesheet" href="../css/styles.css" type="text/css">
         <!-- https://fonts.adobe.com/my_fonts?project_id=jpg1uwx#web_projects-section -->
         <link rel="font-library" href="https://use.typekit.net/jpg1uwx.css">
     </head>
     <body>
         <ul>
           <li><a href="assignment1.html">Assignment 1: Hello, World!</a></li>
-          <li><a href="index.html">Assignment 2: Home Page</a></li>
+          <li><a href="../index.html">Assignment 2: Home Page</a></li>
           <li><a href="assignment3.html">Assignment 3: This One</a></li>
           <li><a href="assignment4.html">Assignment 4: HTML Challenges</a></li>
           <li><a href="assignment5.html">Assignment 5: Challenges V2</a></li>
