--- a/assignments/assignment4.html
+++ b/assignments/assignment4.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Assignment 4</title>
-        <link rel="stylesheet" href="/css/styles.css" type="text/css">
+        <link rel="stylesheet" href="../css/styles.css" type="text/css">
         <!-- https://fonts.adobe.com/my_fonts?project_id=jpg1uwx#web_projects-section -->
         <link rel="font-library" href="https://use.typekit.net/jpg1uwx.css">
         <style type="text/css">
@@ -24,7 +24,7 @@
     <body>
       <ul>
         <li><a href="assignment1.html">Assignment 1: Hello, World!</a></li>
-        <li><a href="index.html">Assignment 2: Home Page</a></li>
+        <li><a href="../index.html">Assignment 2: Home Page</a></li>
         <li><a href="assignment3.html">Assignment 3: Sausages</a></li>
         <li><a href="assignment4.html">Assignment 4: This One</a></li>
         <li><a href="assignment5.html">Assignment 5: Challenges V2</a></li>
