--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     </head>
     <body>
         <ul>
-          <li><a href="assignment1.html">Assignment 1: Hello, World!</a></li>
+          <li><a href="./assignments/assignment1.html">Assignment 1: Hello, World!</a></li>
           <li><a href="index.html">Assignment 2: This One</a></li>
-          <li><a href="assignment3.html">Assignment 3: Sausages</a></li>
-          <li><a href="assignment4.html">Assignment 4: HTML Challenges</a></li>
-          <li><a href="assignment5.html">Assignment 5: Challenges V2</a></li>
+          <li><a href="./assignments/assignment3.html">Assignment 3: Sausages</a></li>
+          <li><a href="./assignments/assignment4.html">Assignment 4: HTML Challenges</a></li>
+          <li><a href="./assignments/assignment5.html">Assignment 5: Challenges V2</a></li>
         </ul>
 
         <hr>
