Began responsive design

--- a/assignments/assignment3.html
+++ b/assignments/assignment3.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
-        <title>Grilled Sausages</title>
-        <link rel="stylesheet" href="../css/styles.css" type="text/css">
-        <!-- https://fonts.adobe.com/my_fonts?project_id=jpg1uwx#web_projects-section -->
-        <link rel="font-library" href="https://use.typekit.net/jpg1uwx.css">
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width,initial-scale=1">
+      <title>Grilled Sausages</title>
+      <link rel="stylesheet" href="../css/styles.css" type="text/css">
+      <!-- https://fonts.adobe.com/my_fonts?project_id=jpg1uwx#web_projects-section -->
+      <link rel="font-library" href="https://use.typekit.net/jpg1uwx.css">
     </head>
     <body>
         <ul>
