--- a/assignments/assignment1.html
+++ b/assignments/assignment1.html
@@ -2,6 +2,7 @@
 <html>
     <head>
       <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width,initial-scale=1">
       <title>Hello, World!</title>
       <link rel="stylesheet" href="../css/styles.css" type="text/css">
       <!-- https://fonts.adobe.com/my_fonts?project_id=jpg1uwx#web_projects-section -->
