--- a/assignments/assignment4.html
+++ b/assignments/assignment4.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
-        <title>Assignment 4</title>
-        <link rel="stylesheet" href="../css/styles.css" type="text/css">
-        <!-- https://fonts.adobe.com/my_fonts?project_id=jpg1uwx#web_projects-section -->
-        <link rel="font-library" href="https://use.typekit.net/jpg1uwx.css">
-        <style type="text/css">
-          .tg  {border-collapse:collapse;border-spacing:0;}
-          .tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
-            overflow:hidden;padding:10px 5px;word-break:normal;}
-          .tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
-            font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
-          .tg .tg-u432{background-color:#656565;border-color:#000000;color:#202122;font-size:50px;text-align:center;vertical-align:middle;width:60px;height:50px}
-          .tg .tg-jnor{background-color:#F8F9FA;border-color:#000000;color:#202122;font-size:50px;text-align:center;vertical-align:middle;width:60px;height:50px}
-          .tg .tg-1f02{background-color:#656565;border-color:#000000;color:#202122;font-size:50px;text-align:center;vertical-align:middle;width:60px;height:50px}
-          .tg .tg-4fcf{background-color:#656565;border-color:#000000;font-size:50px;text-align:center;vertical-align:middle;width:60px;height:50px}
-          .tg .tg-4n8x{border-color:#000000;font-size:50px;text-align:center;vertical-align:middle;width:60px;height:50px}
-          .tg .tg-ovu3{background-color:#F8F9FA;border-color:#000000;color:#202122;font-size:50px;text-align:center;vertical-align:middle;width:60px;height:50px}
-          .tg .tg-hfij{background-color:#656565;border-color:#000000;color:#000000;font-size:50px;text-align:center;vertical-align:middle;width:60px;height:50px}
-        </style>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width,initial-scale=1">
+      <title>Assignment 4</title>
+      <link rel="stylesheet" href="../css/styles.css" type="text/css">
+      <!-- https://fonts.adobe.com/my_fonts?project_id=jpg1uwx#web_projects-section -->
+      <link rel="font-library" href="https://use.typekit.net/jpg1uwx.css">
+      <style type="text/css">
+        .tg  {border-collapse:collapse;border-spacing:0;}
+        .tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+          overflow:hidden;padding:10px 5px;word-break:normal;}
+        .tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+          font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+        .tg .tg-u432{background-color:#656565;border-color:#000000;color:#202122;font-size:50px;text-align:center;vertical-align:middle;width:60px;height:50px}
+        .tg .tg-jnor{background-color:#F8F9FA;border-color:#000000;color:#202122;font-size:50px;text-align:center;vertical-align:middle;width:60px;height:50px}
+        .tg .tg-1f02{background-color:#656565;border-color:#000000;color:#202122;font-size:50px;text-align:center;vertical-align:middle;width:60px;height:50px}
+        .tg .tg-4fcf{background-color:#656565;border-color:#000000;font-size:50px;text-align:center;vertical-align:middle;width:60px;height:50px}
+        .tg .tg-4n8x{border-color:#000000;font-size:50px;text-align:center;vertical-align:middle;width:60px;height:50px}
+        .tg .tg-ovu3{background-color:#F8F9FA;border-color:#000000;color:#202122;font-size:50px;text-align:center;vertical-align:middle;width:60px;height:50px}
+        .tg .tg-hfij{background-color:#656565;border-color:#000000;color:#000000;font-size:50px;text-align:center;vertical-align:middle;width:60px;height:50px}
+      </style>
     </head>
     <body>
       <ul>
