--- a/assignments/assignment5.html
+++ b/assignments/assignment5.html
@@ -1,86 +1,88 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
-        <title>Assignment 4</title>
-        <link rel="stylesheet" href="../css/styles.css" type="text/css">
-        <!-- https://fonts.adobe.com/my_fonts?project_id=jpg1uwx#web_projects-section -->
-        <link rel="font-library" href="https://use.typekit.net/jpg1uwx.css">
-        <style type="text/css">
-          .search-page {
-            font-family:Arial, sans-serif;
-          }
-          .text {
-            font-size: 14px;
-          }
-          .search-results {
-            margin-bottom: 20px;
-          }
-          .result-block {
-            margin-bottom: 35px;
-          }
-          .result-header {
-            margin-top: -8px;
-            margin-bottom: -8px;
-          }
-          .bottom-links {
-            margin-top: -12px;
-          }
-          .search-subsection {
-            margin-top: 20px;
-            margin-left: 20px;
-          }
-          .subsection-result {
-            margin-top: 10px;
-            margin-right: 12px;
-          }
-          .bottom-link {
-            margin-top: -8px;
-          }
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width,initial-scale=1">
+      <title>Assignment 4</title>
+      <link rel="stylesheet" href="../css/styles.css" type="text/css">
+      <!-- https://fonts.adobe.com/my_fonts?project_id=jpg1uwx#web_projects-section -->
+      <link rel="font-library" href="https://use.typekit.net/jpg1uwx.css">
+      <style type="text/css">
+        .search-page {
+          font-family:Arial, sans-serif;
+        }
+        .text {
+          font-size: 14px;
+        }
+        .search-results {
+          margin-bottom: 20px;
+        }
+        .result-block {
+          margin-bottom: 35px;
+        }
+        .result-header {
+          margin-top: -8px;
+          margin-bottom: -8px;
+        }
+        .bottom-links {
+          margin-top: -12px;
+        }
+        .search-subsection {
+          margin-top: 20px;
+          margin-left: 20px;
+        }
+        .subsection-result {
+          margin-top: 10px;
+          margin-right: 12px;
+        }
+        .bottom-link {
+          margin-top: -8px;
+        }
 
-          .tg {
-            border-collapse:collapse;
-            border-spacing:0;
-          }
-          .tg td {
-            border-color:black;
-            border-style:solid;
-            border-width:2px;
-            font-family:Arial, sans-serif;
-            font-size:14px;
-            overflow:hidden;
-            padding:10px 5px;
-            word-break:normal;
-          }
-          .tg th {
-            border-color:black;
-            border-style:solid;
-            border-width:2px;
-            font-family:Arial, sans-serif;
-            font-size:14px;
-            font-weight:normal;
-            overflow:hidden;
-            padding:10px 5px;
-            word-break:normal;}
-          .tg .tg-fcvo {
-            background-color:#689169;
-            color:#202122;
-            font-size:55px;
-            text-align:center;
-            vertical-align:middle;
-            width:70px;
-            height:50px
-          }
-          .tg .tg-i219 {
-            background-color:#e4e2ce;
-            color:#202122;
-            font-size:55px;
-            text-align:center;
-            vertical-align:middle;
-            width:70px;
-            height:50px
-          }
-        </style>
+        .tg {
+          border-collapse:collapse;
+          border-spacing:0;
+        }
+        .tg td {
+          border-color:black;
+          border-style:solid;
+          border-width:2px;
+          font-family:Arial, sans-serif;
+          font-size:14px;
+          overflow:hidden;
+          padding:10px 5px;
+          word-break:normal;
+        }
+        .tg th {
+          border-color:black;
+          border-style:solid;
+          border-width:2px;
+          font-family:Arial, sans-serif;
+          font-size:14px;
+          font-weight:normal;
+          overflow:hidden;
+          padding:10px 5px;
+          word-break:normal;
+        }
+        .tg .tg-fcvo {
+          background-color:#689169;
+          color:#202122;
+          font-size:55px;
+          text-align:center;
+          vertical-align:middle;
+          width:70px;
+          height:50px
+        }
+        .tg .tg-i219 {
+          background-color:#e4e2ce;
+          color:#202122;
+          font-size:55px;
+          text-align:center;
+          vertical-align:middle;
+          width:70px;
+          height:50px
+        }
+      </style>
     </head>
     <body>
       <ul>
