--- a/assignments/assignment1.html
+++ b/assignments/assignment1.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html>
-    <head>
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width,initial-scale=1">
-      <title>Hello, World!</title>
-      <link rel="stylesheet" href="../css/styles.css" type="text/css">
-      <!-- https://fonts.adobe.com/my_fonts?project_id=jpg1uwx#web_projects-section -->
-      <link rel="font-library" href="https://use.typekit.net/jpg1uwx.css">
-    </head>
-    <body>
-      <ul>
-        <li><a href="assignment1.html">Assignment 1: This One</a></li>
-        <li><a href="../index.html">Assignment 2: Home Page</a></li>
-        <li><a href="assignment3.html">Assignment 3: Sausages</a></li>
-        <li><a href="assignment4.html">Assignment 4: HTML Challenges</a></li>
-        <li><a href="assignment5.html">Assignment 5: Challenges V2</a></li>
-      </ul>
 
-      <hr>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Hello, World!</title>
+  <link rel="stylesheet" href="../css/styles.css" type="text/css">
+  <!-- https://fonts.adobe.com/my_fonts?project_id=jpg1uwx#web_projects-section -->
+  <link rel="font-library" href="https://use.typekit.net/jpg1uwx.css">
+</head>
 
-      <p>Hello, World!</p>
-    </body>
+<body>
+  <div class="navigation">
+    <a class="active" href="assignment1.html">Hello, World!</a>
+    <a href="../index.html">Home Page</a>
+    <a href="assignment3.html">Sausages</a>
+    <a href="assignment4.html">HTML Challenges</a>
+    <a href="assignment5.html">Challenges V2</a>
+  </div>
+
+  <hr>
+
+  <p>Hello, World!</p>
+</body>
+
 </html>
