--- a/assignments/assignment4.html
+++ b/assignments/assignment4.html
@@ -1,221 +1,313 @@
 <!DOCTYPE html>
 <html>
-    <head>
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width,initial-scale=1">
-      <title>Assignment 4</title>
-      <link rel="stylesheet" href="../css/styles.css" type="text/css">
-      <!-- https://fonts.adobe.com/my_fonts?project_id=jpg1uwx#web_projects-section -->
-      <link rel="font-library" href="https://use.typekit.net/jpg1uwx.css">
-      <style type="text/css">
-        .tg  {border-collapse:collapse;border-spacing:0;}
-        .tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
-          overflow:hidden;padding:10px 5px;word-break:normal;}
-        .tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
-          font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
-        .tg .tg-u432{background-color:#656565;border-color:#000000;color:#202122;font-size:50px;text-align:center;vertical-align:middle;width:60px;height:50px}
-        .tg .tg-jnor{background-color:#F8F9FA;border-color:#000000;color:#202122;font-size:50px;text-align:center;vertical-align:middle;width:60px;height:50px}
-        .tg .tg-1f02{background-color:#656565;border-color:#000000;color:#202122;font-size:50px;text-align:center;vertical-align:middle;width:60px;height:50px}
-        .tg .tg-4fcf{background-color:#656565;border-color:#000000;font-size:50px;text-align:center;vertical-align:middle;width:60px;height:50px}
-        .tg .tg-4n8x{border-color:#000000;font-size:50px;text-align:center;vertical-align:middle;width:60px;height:50px}
-        .tg .tg-ovu3{background-color:#F8F9FA;border-color:#000000;color:#202122;font-size:50px;text-align:center;vertical-align:middle;width:60px;height:50px}
-        .tg .tg-hfij{background-color:#656565;border-color:#000000;color:#000000;font-size:50px;text-align:center;vertical-align:middle;width:60px;height:50px}
-      </style>
-    </head>
-    <body>
-      <ul>
-        <li><a href="assignment1.html">Assignment 1: Hello, World!</a></li>
-        <li><a href="../index.html">Assignment 2: Home Page</a></li>
-        <li><a href="assignment3.html">Assignment 3: Sausages</a></li>
-        <li><a href="assignment4.html">Assignment 4: This One</a></li>
-        <li><a href="assignment5.html">Assignment 5: Challenges V2</a></li>
-      </ul>
 
-      <hr>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Assignment 4</title>
+  <link rel="stylesheet" href="../css/styles.css" type="text/css">
+  <!-- https://fonts.adobe.com/my_fonts?project_id=jpg1uwx#web_projects-section -->
+  <link rel="font-library" href="https://use.typekit.net/jpg1uwx.css">
+  <style type="text/css">
+    .tg {
+      border-collapse: collapse;
+      border-spacing: 0;
+    }
 
-      <h1>Assignment 4</h1>
+    .tg td {
+      border-color: black;
+      border-style: solid;
+      border-width: 1px;
+      font-family: Arial, sans-serif;
+      font-size: 14px;
+      overflow: hidden;
+      padding: 10px 5px;
+      word-break: normal;
+    }
 
-      <div>
-        <h2 id="challenge1">Challenge 1: Table of Contents</h2>
-        <ul>
-          <li><a href="#challenge1">You are here!</a></li>
-          <li><a href="#challenge2">Chessboard</a></li>
-          <li><a href="#challenge3">Forms</a></li>
-          <li><a href="#challenge4">Google Search</a></li>
-          <li><a href="#challenge5">Accessibility</a></li>
-        </ul>
-      </div>
+    .tg th {
+      border-color: black;
+      border-style: solid;
+      border-width: 1px;
+      font-family: Arial, sans-serif;
+      font-size: 14px;
+      font-weight: normal;
+      overflow: hidden;
+      padding: 10px 5px;
+      word-break: normal;
+    }
 
-      <div>
-        <h2 id="challenge2">Challenge 2: Build a Chessboard</h2>
-        <table class="tg">
-        <thead>
-          <tr>
-            <th class="tg-4fcf">♜</th>
-            <th class="tg-4n8x">♞</th>
-            <th class="tg-4fcf">♝</th>
-            <th class="tg-4n8x">♛</th>
-            <th class="tg-4fcf">♚</th>
-            <th class="tg-4n8x">♝</th>
-            <th class="tg-4fcf">♞</th>
-            <th class="tg-4n8x">♜</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td class="tg-ovu3">♟︎</td>
-            <td class="tg-1f02">♟︎</td>
-            <td class="tg-ovu3">♟︎</td>
-            <td class="tg-1f02">♟︎</td>
-            <td class="tg-ovu3">♟︎</td>
-            <td class="tg-1f02">♟︎</td>
-            <td class="tg-ovu3">♟︎</td>
-            <td class="tg-1f02">♟︎</td>
-          </tr>
-          <tr>
-            <td class="tg-4fcf"></td>
-            <td class="tg-4n8x"></td>
-            <td class="tg-4fcf"></td>
-            <td class="tg-4n8x"></td>
-            <td class="tg-4fcf"></td>
-            <td class="tg-4n8x"></td>
-            <td class="tg-4fcf"></td>
-            <td class="tg-4n8x"></td>
-          </tr>
-          <tr>
-            <td class="tg-4n8x"></td>
-            <td class="tg-4fcf"></td>
-            <td class="tg-4n8x"></td>
-            <td class="tg-4fcf"></td>
-            <td class="tg-4n8x"></td>
-            <td class="tg-4fcf"></td>
-            <td class="tg-4n8x"></td>
-            <td class="tg-hfij"></td>
-          </tr>
-          <tr>
-            <td class="tg-4fcf"></td>
-            <td class="tg-4n8x"></td>
-            <td class="tg-4fcf"></td>
-            <td class="tg-4n8x"></td>
-            <td class="tg-4fcf"></td>
-            <td class="tg-4n8x"></td>
-            <td class="tg-4fcf"></td>
-            <td class="tg-4n8x"></td>
-          </tr>
-          <tr>
-            <td class="tg-4n8x"></td>
-            <td class="tg-4fcf"></td>
-            <td class="tg-4n8x"></td>
-            <td class="tg-4fcf"></td>
-            <td class="tg-4n8x"></td>
-            <td class="tg-4fcf"></td>
-            <td class="tg-4n8x"></td>
-            <td class="tg-4fcf"></td>
-          </tr>
-          <tr>
-            <td class="tg-u432">♙</td>
-            <td class="tg-jnor">♙</td>
-            <td class="tg-u432">♙</td>
-            <td class="tg-jnor">♙</td>
-            <td class="tg-u432">♙</td>
-            <td class="tg-jnor">♙</td>
-            <td class="tg-u432">♙</td>
-            <td class="tg-jnor">♙</td>
-          </tr>
-          <tr>
-            <td class="tg-4n8x">♖</td>
-            <td class="tg-4fcf">♘</td>
-            <td class="tg-4n8x">♗</td>
-            <td class="tg-4fcf">♕</td>
-            <td class="tg-4n8x">♔</td>
-            <td class="tg-4fcf">♗</td>
-            <td class="tg-4n8x">♘</td>
-            <td class="tg-4fcf">♖</td>
-          </tr>
-        </tbody>
-        </table>
-      </div>
+    .tg .tg-u432 {
+      background-color: #656565;
+      border-color: #000000;
+      color: #202122;
+      font-size: 50px;
+      text-align: center;
+      vertical-align: middle;
+      width: 60px;
+      height: 50px
+    }
 
-      <div>
-        <h2 id="challenge3">Challenge 3: Create a Form</h2>
-        <form action="/action_page.php" method="get">
-          <label for="fname">Full Name:</label>
-          <input type="text" id="fname" name="fname"><br><br>
-          <label for="age">Age:</label>
-          <input type="number" id="age" name="age"><br><br>
-          <input type="checkbox" id="enjoy" value="Yes">
-          <label for="enjoy"> I enjoy HTML</label><br><br>
-          <input type="submit" value="Submit">
-        </form>
-      </div>
+    .tg .tg-jnor {
+      background-color: #F8F9FA;
+      border-color: #000000;
+      color: #202122;
+      font-size: 50px;
+      text-align: center;
+      vertical-align: middle;
+      width: 60px;
+      height: 50px
+    }
 
-      <div>
-        <h2 id="challenge4">Challenge 4: A Google Search Page</h2>
+    .tg .tg-1f02 {
+      background-color: #656565;
+      border-color: #000000;
+      color: #202122;
+      font-size: 50px;
+      text-align: center;
+      vertical-align: middle;
+      width: 60px;
+      height: 50px
+    }
 
-        <p>About 1,530,000,000 results (0.61 seconds)</p>
-        <p>https://www.colorado.edu › atlas</p>
-        <h3>ATLAS Institute | University of Colorado Boulder</h3>
-        <p><strong>ATLAS</strong> is an interdisciplinary <strong>institute</strong> for radical creativity and invention.
-          We transform ingenious <br>ideas into reality through research, ...</p>
+    .tg .tg-4fcf {
+      background-color: #656565;
+      border-color: #000000;
+      font-size: 50px;
+      text-align: center;
+      vertical-align: middle;
+      width: 60px;
+      height: 50px
+    }
 
-          <table>
-          <tbody>
-            <tr>
-              <td>
-                <h3>Graduate Degrees in Creative...</h3>
-                <p>Radically interdisciplinary, ATLAS <br>graduate programs nurture ...</p>
-              </td>
-              <td>
-                <h3>About</h3>
-                <p>ATLAS is an interdisciplinary <br>institute for radical creativity and ...</p>
-              </td>
-            </tr>
+    .tg .tg-4n8x {
+      border-color: #000000;
+      font-size: 50px;
+      text-align: center;
+      vertical-align: middle;
+      width: 60px;
+      height: 50px
+    }
 
-            <tr>
-              <td>
-                <h3>Academics</h3>
-                <p>Granted through the College of <br>Engineering and Applied ...</p>
-              </td>
-              <td>
-                <h3>Undergraduate Programs</h3>
-                <p>Granted through the College of <br>Engineering and Applied ...</p>
-              </td>
-            </tr>
+    .tg .tg-ovu3 {
+      background-color: #F8F9FA;
+      border-color: #000000;
+      color: #202122;
+      font-size: 50px;
+      text-align: center;
+      vertical-align: middle;
+      width: 60px;
+      height: 50px
+    }
 
-            <tr>
-              <td>
-                <div>
-                  <h3>Faculty</h3>
-                </div>
-                <div>
-                <p>Lecturer, co-chair Board of <br>Advisors • DESIGN, AR/VR ...</p>
-                </div>
-              </td>
-              <td>
-                <h3>Research + Creative</h3>
-                <p>Check out ATLAS <br>Research Showcase 2020.</p>
-              </td>
-            </tr>
+    .tg .tg-hfij {
+      background-color: #656565;
+      border-color: #000000;
+      color: #000000;
+      font-size: 50px;
+      text-align: center;
+      vertical-align: middle;
+      width: 60px;
+      height: 50px
+    }
+  </style>
+</head>
 
-            <tr>
-              <td>
-                <p>More results from colorado.edu »</p>
-              </td>
-            </tr>
-          </tbody>
-          </table>
-      </div>
+<body>
+  <div class="navigation">
+    <a href="assignment1.html">Hello, World!</a>
+    <a href="../index.html">Home Page</a>
+    <a href="assignment3.html">Sausages</a>
+    <a class="active" href="assignment4.html">HTML Challenges</a>
+    <a href="assignment5.html">Challenges V2</a>
+  </div>
 
-      <div>
-        <h2 id="challenge5">Challenge 5: Accessibility Concerns</h2>
-        <p> Much of the internet presents challenges to those with visual impairments, as it is predominantly reliant on sight.<br>
-          In Challenge 2, there is a very low contrast ratio between the chess pieces and their matching colored space. A screen
-          reader might also struggle identifying the unicode tags and telling the listener where a piece is within the board.
-          Navigating a website can also be difficult, which is why we use large headers to signal where content is. This challenge
-          is also helped using the Table of Contents and hyperlinks. <br> However, one oversight with this page is there is no way
-          to get from one section to the other easily without going back to the Navigation Bar. This could be fixed with a bar
-          that follows the user down the page to allow them to navigate more easily.
-      </div>
+  <hr>
 
-    </body>
+  <h1>Assignment 4</h1>
+
+  <div>
+    <h2 id="challenge1">Challenge 1: Table of Contents</h2>
+    <ul>
+      <li><a href="#challenge1">You are here!</a></li>
+      <li><a href="#challenge2">Chessboard</a></li>
+      <li><a href="#challenge3">Forms</a></li>
+      <li><a href="#challenge4">Google Search</a></li>
+      <li><a href="#challenge5">Accessibility</a></li>
+    </ul>
+  </div>
+
+  <div>
+    <h2 id="challenge2">Challenge 2: Build a Chessboard</h2>
+    <table class="tg">
+      <thead>
+        <tr>
+          <th class="tg-4fcf">♜</th>
+          <th class="tg-4n8x">♞</th>
+          <th class="tg-4fcf">♝</th>
+          <th class="tg-4n8x">♛</th>
+          <th class="tg-4fcf">♚</th>
+          <th class="tg-4n8x">♝</th>
+          <th class="tg-4fcf">♞</th>
+          <th class="tg-4n8x">♜</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td class="tg-ovu3">♟︎</td>
+          <td class="tg-1f02">♟︎</td>
+          <td class="tg-ovu3">♟︎</td>
+          <td class="tg-1f02">♟︎</td>
+          <td class="tg-ovu3">♟︎</td>
+          <td class="tg-1f02">♟︎</td>
+          <td class="tg-ovu3">♟︎</td>
+          <td class="tg-1f02">♟︎</td>
+        </tr>
+        <tr>
+          <td class="tg-4fcf"></td>
+          <td class="tg-4n8x"></td>
+          <td class="tg-4fcf"></td>
+          <td class="tg-4n8x"></td>
+          <td class="tg-4fcf"></td>
+          <td class="tg-4n8x"></td>
+          <td class="tg-4fcf"></td>
+          <td class="tg-4n8x"></td>
+        </tr>
+        <tr>
+          <td class="tg-4n8x"></td>
+          <td class="tg-4fcf"></td>
+          <td class="tg-4n8x"></td>
+          <td class="tg-4fcf"></td>
+          <td class="tg-4n8x"></td>
+          <td class="tg-4fcf"></td>
+          <td class="tg-4n8x"></td>
+          <td class="tg-hfij"></td>
+        </tr>
+        <tr>
+          <td class="tg-4fcf"></td>
+          <td class="tg-4n8x"></td>
+          <td class="tg-4fcf"></td>
+          <td class="tg-4n8x"></td>
+          <td class="tg-4fcf"></td>
+          <td class="tg-4n8x"></td>
+          <td class="tg-4fcf"></td>
+          <td class="tg-4n8x"></td>
+        </tr>
+        <tr>
+          <td class="tg-4n8x"></td>
+          <td class="tg-4fcf"></td>
+          <td class="tg-4n8x"></td>
+          <td class="tg-4fcf"></td>
+          <td class="tg-4n8x"></td>
+          <td class="tg-4fcf"></td>
+          <td class="tg-4n8x"></td>
+          <td class="tg-4fcf"></td>
+        </tr>
+        <tr>
+          <td class="tg-u432">♙</td>
+          <td class="tg-jnor">♙</td>
+          <td class="tg-u432">♙</td>
+          <td class="tg-jnor">♙</td>
+          <td class="tg-u432">♙</td>
+          <td class="tg-jnor">♙</td>
+          <td class="tg-u432">♙</td>
+          <td class="tg-jnor">♙</td>
+        </tr>
+        <tr>
+          <td class="tg-4n8x">♖</td>
+          <td class="tg-4fcf">♘</td>
+          <td class="tg-4n8x">♗</td>
+          <td class="tg-4fcf">♕</td>
+          <td class="tg-4n8x">♔</td>
+          <td class="tg-4fcf">♗</td>
+          <td class="tg-4n8x">♘</td>
+          <td class="tg-4fcf">♖</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <div>
+    <h2 id="challenge3">Challenge 3: Create a Form</h2>
+    <form action="/action_page.php" method="get">
+      <label for="fname">Full Name:</label>
+      <input type="text" id="fname" name="fname"><br><br>
+      <label for="age">Age:</label>
+      <input type="number" id="age" name="age"><br><br>
+      <input type="checkbox" id="enjoy" value="Yes">
+      <label for="enjoy"> I enjoy HTML</label><br><br>
+      <input type="submit" value="Submit">
+    </form>
+  </div>
+
+  <div>
+    <h2 id="challenge4">Challenge 4: A Google Search Page</h2>
+
+    <p>About 1,530,000,000 results (0.61 seconds)</p>
+    <p>https://www.colorado.edu › atlas</p>
+    <h3>ATLAS Institute | University of Colorado Boulder</h3>
+    <p><strong>ATLAS</strong> is an interdisciplinary <strong>institute</strong> for radical creativity and invention.
+      We transform ingenious <br>ideas into reality through research, ...</p>
+
+    <table>
+      <tbody>
+        <tr>
+          <td>
+            <h3>Graduate Degrees in Creative...</h3>
+            <p>Radically interdisciplinary, ATLAS <br>graduate programs nurture ...</p>
+          </td>
+          <td>
+            <h3>About</h3>
+            <p>ATLAS is an interdisciplinary <br>institute for radical creativity and ...</p>
+          </td>
+        </tr>
+
+        <tr>
+          <td>
+            <h3>Academics</h3>
+            <p>Granted through the College of <br>Engineering and Applied ...</p>
+          </td>
+          <td>
+            <h3>Undergraduate Programs</h3>
+            <p>Granted through the College of <br>Engineering and Applied ...</p>
+          </td>
+        </tr>
+
+        <tr>
+          <td>
+            <div>
+              <h3>Faculty</h3>
+            </div>
+            <div>
+              <p>Lecturer, co-chair Board of <br>Advisors • DESIGN, AR/VR ...</p>
+            </div>
+          </td>
+          <td>
+            <h3>Research + Creative</h3>
+            <p>Check out ATLAS <br>Research Showcase 2020.</p>
+          </td>
+        </tr>
+
+        <tr>
+          <td>
+            <p>More results from colorado.edu »</p>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <div>
+    <h2 id="challenge5">Challenge 5: Accessibility Concerns</h2>
+    <p> Much of the internet presents challenges to those with visual impairments, as it is predominantly reliant on sight.<br>
+      In Challenge 2, there is a very low contrast ratio between the chess pieces and their matching colored space. A screen
+      reader might also struggle identifying the unicode tags and telling the listener where a piece is within the board.
+      Navigating a website can also be difficult, which is why we use large headers to signal where content is. This challenge
+      is also helped using the Table of Contents and hyperlinks. <br> However, one oversight with this page is there is no way
+      to get from one section to the other easily without going back to the Navigation Bar. This could be fixed with a bar
+      that follows the user down the page to allow them to navigate more easily.
+  </div>
+
+</body>
+
 </html>
