Archived pre-midterm materials

--- a/pre-midterm/assignments/assignment1.html
+++ b/pre-midterm/assignments/assignment1.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Hello, World!</title>
-  <link rel="stylesheet" href="../css/styles.css" type="text/css">
+  <link rel="stylesheet" href="../sheets/styles.css" type="text/css">
   <!-- https://fonts.adobe.com/my_fonts?project_id=jpg1uwx#web_projects-section -->
   <link rel="font-library" href="https://use.typekit.net/jpg1uwx.css">
 </head>
@@ -13,7 +13,7 @@
 <body>
   <div class="navigation">
     <a class="active" href="assignment1.html">Hello, World!</a>
-    <a href="../index.html">Home Page</a>
+    <a href="../home.html">Home Page</a>
     <a href="assignment3.html">Sausages</a>
     <a href="assignment4.html">HTML Challenges</a>
     <a href="assignment5.html">Challenges V2</a>
