Rework to match wireframe

--- a/about.html
+++ b/about.html
@@ -6,11 +6,54 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/css/master.css">
-  <title></title>
+
+  <link rel="stylesheet" href="./css/master.css">
+  <!-- https://fonts.adobe.com/my_fonts?project_id=jpg1uwx#web_projects-section -->
+  <link rel="font-library" href="https://use.typekit.net/jpg1uwx.css">
+  <script src="https://kit.fontawesome.com/b6d149245e.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+  <div class="container">
+
+    <div class="navigation">
+      <a href="./index.html">HOME</a>
+      <a href="./work.html">WORK</a>
+      <img class="logo" src="./assets/logo.png" alt="logo">
+      <a href="./about.html">ABOUT</a>
+      <a href="./cv.html">CV</a>
+    </div>
+
+    <h2 class="contact">CONTACT</h2>
+    <h4 class="email">EMAIL: BRODYCYPHERS (at) GMAIL.COM</h4>
+
+    <div class="socials">
+      <a href="https://twitter.com/brodycyphers"><i class="fa-brands fa-twitter"></i></a>
+      <a href="https://www.instagram.com/brodycyphers/"><i class="fa-brands fa-instagram"></i></a>
+      <a href="https://www.facebook.com/brodycyphers/"><i class="fa-brands fa-facebook-f"></i></a>
+      <a href="https://www.twitch.tv/thvspark"><i class="fa-brands fa-twitch"></i></a>
+    </div>
+
+    <h2 class="about"> ABOUT</h2>
+    <h3 class="about-more">BRODY CYPHERS - GAME<br>AND GRAPHIC DESIGNER</h3>
+    <p class="about-me">An aspiring designer and prop maker located in Colorado with a passion for the outdoors
+      including big mountain skiing, climbing and backpacking. My other interests include esports, prop fabrication,
+      and digital arts. Otherwise, I'm teaching myself new tools and techniques to improve my design skill set.</p>
+
+    <form class="send-message">
+      <label for="fname">First Name</label>
+      <input type="text" id="fname" name="fname" class="info">
+      <label for="email">Email</label>
+      <input type="text" id="email" name="email" class="info">
+      <label for="subject">Subject</label>
+      <input type="text" id="subject" name="subject" class="info">
+      <label for="message">Message</label>
+      <input type="text" id="message" name="message" class="message">
+      <input type="submit" value="Submit" class="submit">
+    </form>
+
+    <footer>© 2022 | Brody Cyphers</footer>
+  </div>
 
 </body>
 
