--- a/component.html
+++ b/component.html
@@ -21,12 +21,14 @@
       <a href="./cv.html">CV</a>
     </div>
 
-    <h1 class="desktop-head">HELLO.</h1>
-    <h3 class="desktop-subhead">I'M BRODY CYPHERS. GRAPHIC & GAME DESIGNER.</h3>
+    <h1>THIS IS AN H1.</h1>
+    <h2>THIS IS AN H2.</h2>
+    <h3>THIS IS AN H3.</h3>
+    <h4>THIS IS AN H4.</h4>
+    <h5>THIS IS AN H5.</h5>
+    <h6>THIS IS AN H6.</h6>
 
-    <h1 class="mobile-head">HI.</h1>
-    <h3 class="mobile-subhead">I'M BRODY CYPHERS.</h3>
-    <h3 class="mobile-subhead2">GRAPHIC & GAME DESIGNER.</h3>
+    <p>This is a paragraph.</p>
 
     <footer>© 2022 | Brody Cyphers</footer>
   </div>
