--- a/cv.html
+++ b/cv.html
@@ -2,12 +2,14 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <title>Brody Cyphers | Portfolio</title>
+  <title>CV</title>
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="./css/master.css">
+  <!-- https://fonts.adobe.com/my_fonts?project_id=jpg1uwx#web_projects-section -->
+  <link rel="font-library" href="https://use.typekit.net/jpg1uwx.css">
 </head>
 
 <body>
@@ -21,15 +23,18 @@
       <a href="./cv.html">CV</a>
     </div>
 
-    <h1 class="desktop-head">HELLO.</h1>
-    <h3 class="desktop-subhead">I'M BRODY CYPHERS. GRAPHIC & GAME DESIGNER.</h3>
-
-    <h1 class="mobile-head">HI.</h1>
-    <h3 class="mobile-subhead">I'M BRODY CYPHERS.</h3>
-    <h3 class="mobile-subhead2">GRAPHIC & GAME DESIGNER.</h3>
+    <iframe
+      id="cv"
+      src="./assets/cv.pdf"
+      width="100%"
+      height="1056px"
+      frameBorder="0"
+      scrolling="auto">
+    </iframe>
 
     <footer>© 2022 | Brody Cyphers</footer>
   </div>
+
 </body>
 
 </html>
